--- a/theme/manifest.json
+++ b/theme/manifest.json
@@ -5,14 +5,14 @@
 	"theme": {
 		"colors": {
 			"frame": [51, 102, 153],
-			"frame_inactive": [136, 170, 204],
+			"frame_inactive": [153, 187, 221],
 			"frame_incognito": [102, 102, 102],
-			"frame_incognito_inactive": [204, 204, 204],
-			"background_tab": [136, 170, 204],
-			"background_tab_inactive": [136, 170, 204],
-			"background_tab_incognito": [204, 204, 204],
-			"background_tab_incognito_inactive": [204, 204, 204],
-			"toolbar": [238, 238, 238],
+			"frame_incognito_inactive": [187, 187, 187],
+			"background_tab": [153, 187, 221],
+			"background_tab_inactive": [204, 221, 238],
+			"background_tab_incognito": [187, 187, 187],
+			"background_tab_incognito_inactive": [221, 221, 221],
+			"toolbar": [255, 255, 255],
 			"tab_text": [0, 0, 0],
 			"tab_text_inactive": [0, 0, 0],
 			"tab_background_text": [0, 0, 0],
@@ -20,15 +20,17 @@
 			"tab_background_text_incognito": [0, 0, 0],
 			"tab_background_text_incognito_inactive": [0, 0, 0],
 			"bookmark_text": [0, 0, 0],
-			"button_background": [-1, -1, -1]
+			"button_background": [-1, -1, -1],
+			"": [0, 0, 0]
 		},
 		"tints": {
 			"buttons": [-1, -1, -1],
 			"frame": [-1, -1, -1],
-			"frame_inactive": [-1, 1, -1],
-			"frame_incognito": [-1, 1, -1],
-			"frame_incognito_inactive": [-1, 1, -1],
-			"background_tab": [-1, -1, -1]
+			"frame_inactive": [-1, -1, -1],
+			"frame_incognito": [-1, -1, -1],
+			"frame_incognito_inactive": [-1, -1, -1],
+			"background_tab": [-1, -1, -1],
+			"": [0, 0, 0]
 		}
 	}
 }
