--- a/source/manifest.json
+++ b/source/manifest.json
@@ -4,23 +4,29 @@
 	"version": "1",
 	"theme": {
 		"colors": {
-			"frame": [51, 102, 153],
-			"frame_inactive": [153, 187, 221],
-			"frame_incognito": [102, 102, 102],
-			"frame_incognito_inactive": [187, 187, 187],
-			"background_tab": [153, 187, 221],
-			"background_tab_inactive": [204, 221, 238],
-			"background_tab_incognito": [187, 187, 187],
-			"background_tab_incognito_inactive": [221, 221, 221],
-			"toolbar": [255, 255, 255],
-			"tab_text": [0, 0, 0],
-			"tab_text_inactive": [0, 0, 0],
-			"tab_background_text": [0, 0, 0],
-			"tab_background_text_inactive": [0, 0, 0],
-			"tab_background_text_incognito": [0, 0, 0],
-			"tab_background_text_incognito_inactive": [0, 0, 0],
+			"frame": [153, 153, 153],
+			"frame_inactive": [102, 102, 102],
+			"frame_incognito": [-1, -1, -1],
+			"frame_incognito_inactive": [-1, -1, -1],
+			"background_tab": [204, 204, 204],
+			"background_tab_inactive": [102, 102, 102],
+			"background_tab_incognito": [-1, -1, -1],
+			"background_tab_incognito_inactive": [-1, -1, -1],
 			"bookmark_text": [0, 0, 0],
 			"button_background": [-1, -1, -1],
+			"tab_background_text": [51, 51, 51],
+			"tab_background_text_inactive": [51, 51, 51],
+			"tab_background_text_incognito": [-1, -1, -1],
+			"tab_background_text_incognito_inactive": [-1, -1, -1],
+			"tab_text": [0, 0, 0],
+			"toolbar": [255, 255, 255],
+			"toolbar_button_icon": [-1, -1, -1],
+			"omnibox_text": [-1, -1, -1],
+			"omnibox_background": [-1, -1, -1],
+			"ntp_background": [51, 51, 51],
+			"ntp_header": [102, 102, 102],
+			"ntp_link": [153, 204, 255],
+			"ntp_text": [255, 255, 255],
 			"": [0, 0, 0]
 		},
 		"tints": {
@@ -32,5 +38,8 @@
 			"background_tab": [-1, -1, -1],
 			"": [0, 0, 0]
 		}
-	}
+	},
+	"permissions": [
+		"management"
+	]
 }
