--- a/source/manifest.json
+++ b/source/manifest.json
@@ -6,40 +6,39 @@
 		"colors": {
 			"frame": [153, 153, 153],
 			"frame_inactive": [102, 102, 102],
-			"frame_incognito": [-1, -1, -1],
-			"frame_incognito_inactive": [-1, -1, -1],
+			"frame_incognito": [153, 153, 153],
+			"frame_incognito_inactive": [102, 102, 102],
 			"background_tab": [204, 204, 204],
 			"background_tab_inactive": [102, 102, 102],
-			"background_tab_incognito": [-1, -1, -1],
-			"background_tab_incognito_inactive": [-1, -1, -1],
-			"bookmark_text": [0, 0, 0],
-			"button_background": [-1, -1, -1],
+			"background_tab_incognito": [102, 102, 102],
+			"background_tab_incognito_inactive": [102, 102, 102],
+			"bookmark_text": [51, 51, 51],
+			"button_background": [0, 0, 255],
 			"tab_background_text": [51, 51, 51],
-			"tab_background_text_inactive": [51, 51, 51],
+			"tab_background_text_inactive": [204, 204, 204],
 			"tab_background_text_incognito": [-1, -1, -1],
 			"tab_background_text_incognito_inactive": [-1, -1, -1],
-			"tab_text": [0, 0, 0],
+			"tab_text": [51, 51, 51],
 			"toolbar": [255, 255, 255],
-			"toolbar_button_icon": [-1, -1, -1],
-			"omnibox_text": [-1, -1, -1],
-			"omnibox_background": [-1, -1, -1],
+			"toolbar_button_icon": [102, 102, 102],
+			"omnibox_text": [34, 34, 34],
+			"omnibox_background": [238, 238, 238],
 			"ntp_background": [51, 51, 51],
-			"ntp_header": [102, 102, 102],
-			"ntp_link": [153, 204, 255],
+			"ntp_header": [-1, -1, -1],
+			"ntp_link": [-1, -1, -1],
 			"ntp_text": [255, 255, 255],
 			"": [0, 0, 0]
 		},
 		"tints": {
 			"buttons": [-1, -1, -1],
-			"frame": [-1, -1, -1],
-			"frame_inactive": [-1, -1, -1],
-			"frame_incognito": [-1, -1, -1],
-			"frame_incognito_inactive": [-1, -1, -1],
-			"background_tab": [-1, -1, -1],
+			"frame": [0, 1, 0.5],
+			"frame_inactive": [0, 1, 0.5],
+			"frame_incognito": [0, 1, 0.5],
+			"frame_incognito_inactive": [0, 1, 0.5],
+			"background_tab": [0, 1, 0.5],
 			"": [0, 0, 0]
-		}
+		},
+		"": null
 	},
-	"permissions": [
-		"management"
-	]
+	"": null
 }
