--- a/color-e/manifest.json
+++ b/color-e/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name": "theme",
+	"name": "theme-e",
 	"version": "1",
 	"theme": {
 		"colors": {
@@ -10,19 +10,19 @@
 			"frame_incognito_inactive": [51, 51, 51],
 			"background_tab": [153, 153, 153],
 			"background_tab_inactive": [153, 153, 153],
-			"background_tab_incognito": [204, 204, 204],
-			"background_tab_incognito_inactive": [204, 204, 204],
+			"background_tab_incognito": [153, 153, 153],
+			"background_tab_incognito_inactive": [153, 153, 153],
 			"bookmark_text": [51, 51, 51],
-			"button_background": [0, 0, 255],
+			"button_background": [-1, -1, -1],
 			"tab_background_text": [51, 51, 51],
 			"tab_background_text_inactive": [51, 51, 51],
-			"tab_background_text_incognito": [102, 102, 102],
-			"tab_background_text_incognito_inactive": [102, 102, 102],
+			"tab_background_text_incognito": [51, 51, 51],
+			"tab_background_text_incognito_inactive": [51, 51, 51],
 			"tab_text": [51, 51, 51],
-			"toolbar": [255, 255, 255],
+			"toolbar": [204, 204, 204],
 			"toolbar_button_icon": [51, 51, 51],
-			"omnibox_text": [51, 51, 51],
-			"omnibox_background": [255, 255, 255],
+			"omnibox_text": [0, 0, 0],
+			"omnibox_background": [204, 204, 204],
 			"ntp_background": [51, 51, 51],
 			"ntp_header": [-1, -1, -1],
 			"ntp_link": [-1, -1, -1],
