--- a/color-a/manifest.json
+++ b/color-a/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name": "theme",
+	"name": "theme-a",
 	"version": "1",
 	"theme": {
 		"colors": {
@@ -12,15 +12,15 @@
 			"background_tab_inactive": [51, 51, 51],
 			"background_tab_incognito": [51, 51, 51],
 			"background_tab_incognito_inactive": [51, 51, 51],
-			"bookmark_text": [204, 204, 204],
-			"button_background": [0, 0, 255],
+			"bookmark_text": [102, 102, 102],
+			"button_background": [-1, -1, -1],
 			"tab_background_text": [153, 153, 153],
 			"tab_background_text_inactive": [153, 153, 153],
 			"tab_background_text_incognito": [153, 153, 153],
 			"tab_background_text_incognito_inactive": [153, 153, 153],
-			"tab_text": [204, 204, 204],
+			"tab_text": [102, 102, 102],
 			"toolbar": [0, 0, 0],
-			"toolbar_button_icon": [204, 204, 204],
+			"toolbar_button_icon": [153, 153, 153],
 			"omnibox_text": [204, 204, 204],
 			"omnibox_background": [0, 0, 0],
 			"ntp_background": [51, 51, 51],
