--- a/color-c/manifest.json
+++ b/color-c/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name": "theme",
+	"name": "theme-c",
 	"version": "1",
 	"theme": {
 		"colors": {
@@ -8,21 +8,21 @@
 			"frame_inactive": [51, 51, 51],
 			"frame_incognito": [102, 102, 102],
 			"frame_incognito_inactive": [51, 51, 51],
-			"background_tab": [102, 102, 102],
-			"background_tab_inactive": [51, 51, 51],
-			"background_tab_incognito": [102, 102, 102],
-			"background_tab_incognito_inactive": [51, 51, 51],
-			"bookmark_text": [153, 153, 153],
-			"button_background": [0, 0, 255],
-			"tab_background_text": [204, 204, 204],
-			"tab_background_text_inactive": [153, 153, 153],
-			"tab_background_text_incognito": [204, 204, 204],
-			"tab_background_text_incognito_inactive": [153, 153, 153],
-			"tab_text": [153, 153, 153],
-			"toolbar": [51, 51, 51],
+			"background_tab": [51, 51, 51],
+			"background_tab_inactive": [102, 102, 102],
+			"background_tab_incognito": [51, 51, 51],
+			"background_tab_incognito_inactive": [102, 102, 102],
+			"bookmark_text": [204, 204, 204],
+			"button_background": [-1, -1, -1],
+			"tab_background_text": [153, 153, 153],
+			"tab_background_text_inactive": [204, 204, 204],
+			"tab_background_text_incognito": [153, 153, 153],
+			"tab_background_text_incognito_inactive": [204, 204, 204],
+			"tab_text": [204, 204, 204],
+			"toolbar": [102, 102, 102],
 			"toolbar_button_icon": [255, 255, 255],
 			"omnibox_text": [255, 255, 255],
-			"omnibox_background": [51, 51, 51],
+			"omnibox_background": [102, 102, 102],
 			"ntp_background": [51, 51, 51],
 			"ntp_header": [-1, -1, -1],
 			"ntp_link": [-1, -1, -1],
