--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 
 !/docs/
 
-!/theme-color-a/manifest.json
-!/theme-color-b/manifest.json
-!/theme-color-c/manifest.json
-!/theme-color-d/manifest.json
-!/theme-color-e/manifest.json
-!/theme-color-f/manifest.json
+!/theme-a/manifest.json
+!/theme-b/manifest.json
+!/theme-c/manifest.json
+!/theme-d/manifest.json
+!/theme-e/manifest.json
+!/theme-f/manifest.json
